# LinAl

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.h
src/: test.cc
test/: matrix_test.cc
